Fix possible memory leak

If gedit_document_output_stream_write() is called and the ostream is not
initialized, g_iconv_open() fails (so gedit_document_output_stream_write()
returns -1), and gedit_document_output_stream_write() is called again,
then the `charset_conv` that was created during the previous initialization
attempt would be leaked.

https://bugzilla.gnome.org/show_bug.cgi?id=669898